--- a/SamadAssign33/src/main/res/values/strings.xml
+++ b/SamadAssign33/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <!--Samad Agha n01364908 C-->
 <resources>
     <string name="app_name">SamadAssign3</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="tab_text_1">Canvas</string>
+    <string name="tab_text_2">Frames</string>
+    <string name="tab_text_3">Tween</string>
     <string name="redColor">red</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Samad Agha n01364908</string>
@@ -29,5 +29,11 @@
     <string name="stopframe">Stop</string>
     <string name="bananadance">bananaDance</string>
     <string name="ExitConfirm">Are you sure you want to leave</string>
-    <string name="ExitConfirmTitle">Exit App</string>
+    <string name="ExitConfirmTitle">Samad Agha n01364908</string>
+    <string name="request_permission">Request Permission</string>
+    <string name="speed1">1s</string>
+    <string name="speed2">2s</string>
+    <string name="speed3">3s</string>
+    <string name="speed4">4s</string>
+    <string name="avatar">avatar</string>
 </resources>
